documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long * LPMSGADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

L13W32API ERRVAL __stdcall L13_SchedBuildEx(INT nummsgs,LPMSGADDR msgaddr,LPINT freq,LPINT period,LPVOID buf,ULONG bufsize,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SchedBuildExx(ULONG frametime,INT nummsgs,LPMSGADDR msgaddr,LPINT period,LPVOID buf,ULONG bufsize,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SchedCalc(LPMSGADDR msgaddr,HCARD handleval);

L13W32API VOID __stdcall L13_SchedDisplay(ULONG nummsgs,LPULONG count);

L13W32API VOID __stdcall L13_SchedHook(INT index,LPVOID ptr);

L13W32API ERRVAL __stdcall L13_SchedInsEnd(HCARD handleval);

L13W32API ERRVAL __stdcall L13_SchedInsMsg(ULONG index,LPMSGADDR msgaddr,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SchedInsStart(ULONG frametime,ULONG count,HCARD handleval);

L13W32API ULONG __stdcall L13_SchedMaxval(LPULONG array,ULONG arraycount);

L13W32API ULONG __stdcall L13_SchedMinval(LPULONG array,ULONG arraycount);

L13W32API VOID __stdcall L13_SchedPrint(LPSTR str,...);

L13W32API ERRVAL __stdcall L13_SEEPokeW(INT value,INT numbits,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SEERdBit(LPINT valueptr,INT bitnum,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SEERdL(LPULONG valueptr,INT addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SEERdW(LPINT valueptr,INT addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SEEWrBit(INT value,INT bitnum,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SEEWrL(ULONG value,INT addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SEEWrW(INT value,INT addrval,HCARD handleval);

L13W32API USHORT __stdcall L13_SEMMRdW(ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_SEMMWrW(USHORT value,ULONG addrval,HCARD handleval);

L13W32API USHORT __stdcall L13_SEMRdW(ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_SEMWrW(USHORT value,ULONG addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SerialClear(HCARD handleval);

L13W32API ERRVAL __stdcall L13_SerialConfig(ULONG configval,USHORT count,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SerialConfigEx(ULONG configval,USHORT count,HCARD handleval);

L13W32API INT __stdcall L13_SerialStatus(HCARD handleval);

L13W32API ULONG __stdcall L13_SerialWr(LPUSHORT buf,HCARD handleval);

L13W32API ULONG __stdcall L13_Shl(ULONG dataval,USHORT cntval);

L13W32API ULONG __stdcall L13_Shr(ULONG dataval,USHORT cntval);

L13W32API VOID __stdcall L13_TimerClear(HCARD handleval);

L13W32API ULONG __stdcall L13_TimerRd(HCARD handleval);

L13W32API INT __stdcall L13_TimerResolution(INT timerresol,HCARD handleval);

L13W32API USHORT __stdcall L13_TimerResolutionEx(USHORT timershift,HCARD handleval);

L13W32API INT __stdcall L13_ValAsciiCmpi(LPSTR str1,LPSTR str2);

L13W32API LPSTR __stdcall L13_ValAsciiCpy(LPSTR strdest,LPCSTR strsrc,INT count);

L13W32API VOID __stdcall L13_ValAsciiTrimLead(LPSTR buf);

L13W32API VOID __stdcall L13_ValAsciiTrimTrail(LPSTR buf);

L13W32API ULONG __stdcall L13_ValFromAscii(LPCSTR asciistr,INT radixval);

L13W32API USHORT __stdcall L13_ValGetBits(USHORT oldvalue,INT startbit,INT endbit);

L13W32API LPSTR __stdcall L13_ValIncAscii(LPSTR asciistr);

L13W32API LPSTR __stdcall L13_ValInccAscii(LPSTR asciistr);

L13W32API BOOL __stdcall L13_ValIsLower(INT value);

L13W32API INT __stdcall L13_ValLenAscii(INT numbits,INT radixval);

L13W32API USHORT __stdcall L13_ValPackRTCWD(INT MCflag,INT TAval,INT TRflag,INT SAval,INT count);

L13W32API USHORT __stdcall L13_ValPutBits(USHORT oldvalue,USHORT newfld,INT startbit,INT endbit);

L13W32API LPSTR __stdcall L13_ValToAscii(ULONG value,LPSTR asciistr,INT numbits,INT radixval);

L13W32API INT __stdcall L13_ValToUpper(INT value);

L13W32API VOID __stdcall L13_ValUnpackRTCWD(USHORT cwd,LPINT BCASTflag,LPINT MCflag,LPINT TAval,LPINT TRflag,LPINT SAval,LPINT count);

/**
*
*  Bus controller configuration options
*
**/

#define BCCFG_DEFAULT      0x00000000L      //Select all default settings
#define BCCFG_ENABLE       0x00000000L      //Enable bus controller (default)
#define BCCFG_DISABLE      0x00000001L      //Disable bus controller
#define BCCFG_TRIGNONE     0x00000000L      //No trigger (default)
#define BCCFG_TRIGEXT      0x00000010L      //Trigger external
#define BCCFG_TRIGSTART    0x00000020L      //Trigger external start
#define BCCFG_NOINTHALT    0x00000000L      //Do not generate interrupt on halt (default)
#define BCCFG_INTHALT      0x00000100L      //Generate interrupt on halt
#define BCCFG_NOINTPAUSE   0x00000000L      //Do not generate interrupt on pause (default)
#define BCCFG_INTPAUSE     0x00000200L      //Generate interrupt on pause
#define BCCFG_NOLOOPMAX    0x00000000L      //Disable maximum loop count (default)
#define BCCFG_LOOPMAX      0x00001000L      //Enable maximum loop count
#define BCCFG_NOSTEP       0x00000000L      //Disable single stepping (default)
#define BCCFG_STEP         0x00002000L      //Enable single stepping
#define BCCFG_MC01         0x00000000L      //Select SA=00000 or SA=11111 for mode codes (default)
#define BCCFG_MC1          0x01000000L      //Select SA=11111 for mode codes
#define BCCFG_MC0          0x02000000L      //Select SA=00000 for mode codes
#define BCCFG_MCNONE       0x03000000L      //Disable mode codes
#define BCCFG_SYNCALL      0x00000000L      //*Sync on all messages (default)
#define BCCFG_SYNCSEL      0x40000000L      //*Selective sync
#define BCCFG_MODEL        0x00000000L      //BC messages are created in dual-port RAM (default)
#define BCCFG_RAM          0x00100000L      //BC messages are created in static RAM
#define BCCFG_DPRAM        0x00200000L      //BC messages are created in dual-port RAM

/**
*
*  Monitor configuration options
*
**/

#define MONCFG_DEFAULT      0x00000000L     //Select all default settings
#define MONCFG_FILLHALT     0x00000000L     //Enable monitor in fill and halt mode (default)
#define MONCFG_DISABLE      0x00000001L     //Disable monitor
#define MONCFG_CONTINUOUS   0x00000002L     //Enable monitor in continuous mode
#define MONCFG_DMA          0x00000004L     //Enable monitor in dma mode
#define MONCFG_FREE         0x00000008L     //Enable monitor in free mode
#define MONCFG_FAST         0x00000010L     //Enable monitor in fast mode
#define MONCFG_NOINTFULL    0x00000000L     //Do not generate interrupt when monitor full (default)
#define MONCFG_INTFULL      0x00001000L     //Generate interrupt when monitor full
#define MONCFG_COMPLETE     0x00000000L     //Enable receiving complete words (default)
#define MONCFG_INCOMPLETE   0x00002000L     //Enable receiving incomplete words
#define MONCFG_MC01         0x00000000L     //Select SA=00000 or SA=11111 for mode codes (default)
#define MONCFG_MC1          0x00100000L     //Select SA=11111 for mode codes
#define MONCFG_MC0          0x00200000L     //Select SA=00000 for mode codes
#define MONCFG_MCNONE       0x00300000L     //Disable mode codes
#define MONCFG_16K          0x00000000L     //Allocate a 16K monitor buffer (default)
#define MONCFG_ALLAVAIL     0x01000000L     //Allocate all available memory to monitor buffer
#define MONCFG_32K          0x02000000L     //Allocate a 32K monitor buffer
#define MONCFG_64K          0x04000000L     //Allocate a 64K monitor buffer
#define MONCFG_128K         0x08000000L     //Allocate a 128K monitor buffer
#define MONCFG_DPRAM        0x10000000L     //Allocate all available dual-port memory