documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32NET.VB

    Public Declare Function L13_SchedBuildEx Lib "L13W32.DLL" Alias "_L13_SchedBuildEx@28" (ByVal nummsgs As Int32, ByRef msgaddr As UInt32, ByRef freq As Int32, ByRef period As Int32, ByVal buf As IntPtr, ByVal bufsize As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SchedBuildExx Lib "L13W32.DLL" Alias "_L13_SchedBuildExx@28" (ByVal frametime As UInt32, ByVal nummsgs As Int32, ByRef msgaddr As UInt32, ByRef period As Int32, ByVal buf As IntPtr, ByVal bufsize As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SchedCalc Lib "L13W32.DLL" Alias "_L13_SchedCalc@8" (ByRef msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Sub L13_SchedDisplay Lib "L13W32.DLL" Alias "_L13_SchedDisplay@8" (ByVal nummsgs As UInt32, ByRef count As UInt32)
    Public Declare Sub L13_SchedHook Lib "L13W32.DLL" Alias "_L13_SchedHook@8" (ByVal index As Int32, ByVal ptr As IntPtr)
    Public Declare Function L13_SchedInsEnd Lib "L13W32.DLL" Alias "_L13_SchedInsEnd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SchedInsMsg Lib "L13W32.DLL" Alias "_L13_SchedInsMsg@12" (ByVal index As UInt32, ByRef msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SchedInsStart Lib "L13W32.DLL" Alias "_L13_SchedInsStart@12" (ByVal frametime As UInt32, ByVal count As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SchedMaxval Lib "L13W32.DLL" Alias "_L13_SchedMaxval@8" (ByRef arrayval As UInt32, ByVal arrayvalcount As UInt32) As UInt32
    Public Declare Function L13_SchedMinval Lib "L13W32.DLL" Alias "_L13_SchedMinval@8" (ByRef arrayval As UInt32, ByVal arrayvalcount As UInt32) As UInt32
    Public Declare Sub L13_SchedPrint Lib "L13W32.DLL" Alias "" (ByVal ParamArray list() As String)
    Public Declare Function L13_SEEPokeW Lib "L13W32.DLL" Alias "_L13_SEEPokeW@12" (ByVal value As Int32, ByVal numbits As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SEERdBit Lib "L13W32.DLL" Alias "_L13_SEERdBit@12" (ByRef valueptr As Int32, ByVal bitnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SEERdL Lib "L13W32.DLL" Alias "_L13_SEERdL@12" (ByRef valueptr As UInt32, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SEERdW Lib "L13W32.DLL" Alias "_L13_SEERdW@12" (ByRef valueptr As Int32, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SEEWrBit Lib "L13W32.DLL" Alias "_L13_SEEWrBit@12" (ByVal value As Int32, ByVal bitnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SEEWrL Lib "L13W32.DLL" Alias "_L13_SEEWrL@12" (ByVal value As UInt32, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SEEWrW Lib "L13W32.DLL" Alias "_L13_SEEWrW@12" (ByVal value As Int32, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SEMMRdW Lib "L13W32.DLL" Alias "_L13_SEMMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_SEMMWrW Lib "L13W32.DLL" Alias "_L13_SEMMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L13_SEMRdW Lib "L13W32.DLL" Alias "_L13_SEMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_SEMWrW Lib "L13W32.DLL" Alias "_L13_SEMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L13_SerialClear Lib "L13W32.DLL" Alias "_L13_SerialClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SerialConfig Lib "L13W32.DLL" Alias "_L13_SerialConfig@12" (ByVal configval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SerialConfigEx Lib "L13W32.DLL" Alias "_L13_SerialConfigEx@12" (ByVal configval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SerialStatus Lib "L13W32.DLL" Alias "_L13_SerialStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_SerialWr Lib "L13W32.DLL" Alias "_L13_SerialWr@8" (ByRef buf As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_Shl Lib "L13W32.DLL" Alias "_L13_Shl@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Function L13_Shr Lib "L13W32.DLL" Alias "_L13_Shr@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Sub L13_TimerClear Lib "L13W32.DLL" Alias "_L13_TimerClear@4" (ByVal handleval As UInt32)
    Public Declare Function L13_TimerRd Lib "L13W32.DLL" Alias "_L13_TimerRd@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_TimerResolution Lib "L13W32.DLL" Alias "_L13_TimerResolution@8" (ByVal timerresol As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_TimerResolutionEx Lib "L13W32.DLL" Alias "_L13_TimerResolutionEx@8" (ByVal timershift As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_ValAsciiCmpi Lib "L13W32.DLL" Alias "_L13_ValAsciiCmpi@8" (ByRef str1 As String, ByRef str2 As String) As Int32
    Public Declare Function L13_ValAsciiCpy Lib "L13W32.DLL" Alias "_L13_ValAsciiCpy@12" (ByRef strdest As String, ByRef strsrc As String, ByVal count As Int32) As UInt32
    Public Declare Sub L13_ValAsciiTrimLead Lib "L13W32.DLL" Alias "_L13_ValAsciiTrimLead@4" (ByRef buf As String)
    Public Declare Sub L13_ValAsciiTrimTrail Lib "L13W32.DLL" Alias "_L13_ValAsciiTrimTrail@4" (ByRef buf As String)
    Public Declare Function L13_ValFromAscii Lib "L13W32.DLL" Alias "_L13_ValFromAscii@8" (ByRef asciistr As String, ByVal radixval As Int32) As UInt32
    Public Declare Function L13_ValGetBits Lib "L13W32.DLL" Alias "_L13_ValGetBits@12" (ByVal oldvalue As UInt16, ByVal startbit As Int32, ByVal endbit As Int32) As UInt16
    Public Declare Function L13_ValIncAscii Lib "L13W32.DLL" Alias "_L13_ValIncAscii@4" (ByRef asciistr As String) As UInt32
    Public Declare Function L13_ValInccAscii Lib "L13W32.DLL" Alias "_L13_ValInccAscii@4" (ByRef asciistr As String) As UInt32
    Public Declare Function L13_ValIsLower Lib "L13W32.DLL" Alias "_L13_ValIsLower@4" (ByVal value As Int32) As Int32
    Public Declare Function L13_ValLenAscii Lib "L13W32.DLL" Alias "_L13_ValLenAscii@8" (ByVal numbits As Int32, ByVal radixval As Int32) As Int32
    Public Declare Function L13_ValPackRTCWD Lib "L13W32.DLL" Alias "_L13_ValPackRTCWD@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal count As Int32) As UInt16
    Public Declare Function L13_ValPutBits Lib "L13W32.DLL" Alias "_L13_ValPutBits@16" (ByVal oldvalue As UInt16, ByVal newfld As UInt16, ByVal startbit As Int32, ByVal endbit As Int32) As UInt16
    Public Declare Function L13_ValToAscii Lib "L13W32.DLL" Alias "_L13_ValToAscii@16" (ByVal value As UInt32, ByRef asciistr As String, ByVal numbits As Int32, ByVal radixval As Int32) As UInt32
    Public Declare Function L13_ValToUpper Lib "L13W32.DLL" Alias "_L13_ValToUpper@4" (ByVal value As Int32) As Int32
    Public Declare Sub L13_ValUnpackRTCWD Lib "L13W32.DLL" Alias "_L13_ValUnpackRTCWD@28" (ByVal cwd As UInt16, ByRef bcastflag As Int32, ByRef mcflag As Int32, ByRef taval As Int32, ByRef trflag As Int32, ByRef saval As Int32, ByRef count As Int32)

    '/**
    '*
    '*  Bus controller configuration options
    '*
    '**/

    Public Const BCCFG_DEFAULT As UInt32 = &H0L  '//Select all default settings
    Public Const BCCFG_ENABLE As UInt32 = &H0L   '//Enable bus controller (default)
    Public Const BCCFG_DISABLE As UInt32 = &H1L  '//Disable bus controller
    Public Const BCCFG_TRIGNONE As UInt32 = &H0L '//No trigger (default)
    Public Const BCCFG_TRIGEXT As UInt32 = &H10L  '//Trigger external
    Public Const BCCFG_TRIGSTART As UInt32 = &H20L    '//Trigger external start
    Public Const BCCFG_NOINTHALT As UInt32 = &H0L    '//Do not generate interrupt on halt (default)
    Public Const BCCFG_INTHALT As UInt32 = &H100L  '//Generate interrupt on halt
    Public Const BCCFG_NOINTPAUSE As UInt32 = &H0L   '//Do not generate interrupt on pause (default)
    Public Const BCCFG_INTPAUSE As UInt32 = &H200L '//Generate interrupt on pause
    Public Const BCCFG_NOLOOPMAX As UInt32 = &H0L    '//Disable maximum loop count (default)
    Public Const BCCFG_LOOPMAX As UInt32 = &H1000L  '//Enable maximum loop count
    Public Const BCCFG_NOSTEP As UInt32 = &H0L   '//Disable single stepping (default)
    Public Const BCCFG_STEP As UInt32 = &H2000L '//Enable single stepping
    Public Const BCCFG_MC01 As UInt32 = &H0L '//Select SA=00000 or SA=11111 for mode codes (default)
    Public Const BCCFG_MC1 As UInt32 = &H1000000L  '//Select SA=11111 for mode codes
    Public Const BCCFG_MC0 As UInt32 = &H2000000L  '//Select SA=00000 for mode codes
    Public Const BCCFG_MCNONE As UInt32 = &H3000000L   '//Disable mode codes
    Public Const BCCFG_SYNCALL As UInt32 = &H0L  '//Sync on all messages (default)
    Public Const BCCFG_SYNCSEL As UInt32 = &H40000000L  '//Selective sync
    Public Const BCCFG_MODEL As UInt32 = &H0L    '//BC messages are created in dual-port RAM (default)
    Public Const BCCFG_RAM As UInt32 = &H100000L  '//BC messages are created in static RAM
    Public Const BCCFG_DPRAM As UInt32 = &H200000L    '//BC messages are created in dual-port RAM

    '/**
    '*
    '*  Monitor configuration options
    '*
    '**/

    Public Const MONCFG_DEFAULT As UInt32 = &H0L '//Select all default settings
    Public Const MONCFG_FILLHALT As UInt32 = &H0L    '//Enable monitor in fill and halt mode (default)
    Public Const MONCFG_DISABLE As UInt32 = &H1L '//Disable monitor
    Public Const MONCFG_CONTINUOUS As UInt32 = &H2L  '//Enable monitor in continuous mode
    Public Const MONCFG_DMA As UInt32 = &H4L '//Enable monitor in dma mode
    Public Const MONCFG_FREE As UInt32 = &H8L    '//Enable monitor in free mode
    Public Const MONCFG_FAST As UInt32 = &H10L    '//Enable monitor in fast mode
    Public Const MONCFG_NOINTFULL As UInt32 = &H0L   '//Do not generate interrupt when monitor full (default)
    Public Const MONCFG_INTFULL As UInt32 = &H1000L '//Generate interrupt when monitor full
    Public Const MONCFG_COMPLETE As UInt32 = &H0L    '//Enable receiving complete words (default)
    Public Const MONCFG_INCOMPLETE As UInt32 = &H2000L  '//Enable receiving incomplete words
    Public Const MONCFG_MC01 As UInt32 = &H0L    '//Select SA=00000 or SA=11111 for mode codes (default)
    Public Const MONCFG_MC1 As UInt32 = &H100000L '//Select SA=11111 for mode codes
    Public Const MONCFG_MC0 As UInt32 = &H200000L '//Select SA=00000 for mode codes
    Public Const MONCFG_MCNONE As UInt32 = &H300000L  '//Disable mode codes
    Public Const MONCFG_16K As UInt32 = &H0L '//Allocate a 16K monitor buffer (default)
    Public Const MONCFG_ALLAVAIL As UInt32 = &H1000000L    '//Allocate all available memory to monitor buffer
    Public Const MONCFG_32K As UInt32 = &H2000000L '//Allocate a 32K monitor buffer
    Public Const MONCFG_64K As UInt32 = &H4000000L '//Allocate a 64K monitor buffer
    Public Const MONCFG_128K As UInt32 = &H8000000L    '//Allocate a 128K monitor buffer
    Public Const MONCFG_DPRAM As UInt32 = &H10000000L   '//Allocate all available dual-port memory

    '/**
    '*
    '*  Remote terminal configuration options
    '*
    '**/
